<resources>
    <string name="app_name">账单</string>
    <string name="expense">支出</string>
    <string name="income">收入</string>
    <string name="expense_and_income">收支</string>
    <string name="export_to_excel">导出Excel</string>
    <string name="import_from_excel">从Excel导入</string>
    <string name="import_from_mi">从小米备份导入</string>
    <string name="my_expense">我的支出</string>
    <string name="my_income">我的收入</string>
    <string name="my_expense_and_income">我的收支</string>
    <string name="pick_file">选择文件</string>
    <string name="finish_import">导入</string>
    <string name="finish_export">导出</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="select_all">全选</string>
    <string name="select_none">全不选</string>
    <string name="excel_error">文件损坏或为非xlsx文件</string>
    <string name="mi_error">文件损坏或为非MIUI备份文件</string>
    <string name="record_detail">账单详情</string>
    <string name="save_change">保存修改</string>
    <string name="currency">元</string>
    <string name="info_tip">备注</string>
    <string name="amount_tip">请输入金额</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="day_statistics_tip">今日累计</string>
    <string name="month_statistics_tip">本月累计</string>
    <string name="month_report">月度报告</string>
    <string name="year_report">年度报告</string>
    <string name="week_report">每周报告</string>
    <string name="report_tip">支出分布</string>
    <string name="detailTip">详细</string>
    <string name="orderByTime">时间↓</string>
    <string name="orderByAmount">金额↓</string>
    <string name="preference_setting">偏好设置</string>
    <string name="category_preference">类别</string>
    <string name="way_preference">方式</string>
</resources>
