<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="50dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/today_statistics_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_statistics_tip"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/today_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/today_statistics_tip"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/today_statistics"
        android:layout_margin="5dp"
        android:layout_toRightOf="@id/today_statistics"
        android:text="@string/currency"
        android:textColor="@color/textColorPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/month_statistics_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/month_statistics_tip"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/month_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/month_statistics_tip"
        android:layout_toLeftOf="@id/currency_tip"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/currency_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/month_statistics"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:text="@string/currency"
        android:textColor="@color/textColorPrimary"
        android:textSize="14sp" />
</RelativeLayout>